Fix nav spacing

--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ body {
 }
 
 .nav_adjust {
-  margin-right: 8px;
+  margin-right: 0.4rem;
 }
 
 #main_section a {
